0.1.5
=====
* Add Python 3.7 support to Travis CI

0.1.4
======
* Refactor code to have a common method for fetching filings
* Provide user to add their own repo path where filings can be downloaded
* Add CI pipeline using Travis 

0.1.3
=====
* Add support for SD forms
* Fixed bugs for python3

0.1.2
=====
* Fix issue related to file saving
* Remove platform dependent file path

0.1.1
=====
* Add API for 10-K
* Create a central API point using class