@@ -2,6 +2,11 @@ from SECEdgar.base import _FilingBase
 
 
 class Filing10K(_FilingBase):
+    """Fetches 10-K reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(Filing10K, self).__init__(cik, **kwargs)
@@ -17,6 +22,11 @@ class Filing10K(_FilingBase):
 
 
 class Filing10Q(_FilingBase):
+    """Fetches 10-Q reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(Filing10Q, self).__init__(cik, **kwargs)
@@ -32,6 +42,11 @@ class Filing10Q(_FilingBase):
 
 
 class Filing8K(_FilingBase):
+    """Fetches 8-K reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(Filing8K, self).__init__(cik, **kwargs)
@@ -47,6 +62,11 @@ class Filing8K(_FilingBase):
 
 
 class FilingSD(_FilingBase):
+    """Fetches SD reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(FilingSD, self).__init__(cik, **kwargs)
@@ -62,6 +82,11 @@ class FilingSD(_FilingBase):
 
 
 class Filing13F(_FilingBase):
+    """Fetches 13-F reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(Filing13F, self).__init__(cik, **kwargs)
@@ -77,6 +102,11 @@ class Filing13F(_FilingBase):
 
 
 class Filing4(_FilingBase):
+    """Fetches '4' reports from SEC for given CIK.
+
+    Attributes:
+        cik (str): Central Index Key (CIK) for company of interest.
+    """
 
     def __init__(self, cik, **kwargs):
         super(Filing4, self).__init__(cik, **kwargs)
