@@ -34,7 +34,7 @@ release = '0.1.4'
 # extensions coming with Sphinx (named 'sphinx.ext.*') or your custom
 # ones.
 extensions = ['sphinx.ext.autodoc', 'sphinx.ext.githubpages',
-              'sphinx.ext.napoleon', 'sphinx.ext.todo']
+              'sphinx.ext.napoleon', 'sphinx.ext.todo', 'sphinx.ext.intersphinx']
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = []
