@@ -6,6 +6,8 @@ What's New
 
 New features, bug fixes, and improvements for each release.
 
+.. include:: whatsnew/v0.1.5.txt
+
 .. include:: whatsnew/v0.1.4.txt
 
 .. include:: whatsnew/v0.1.3.txt
